--- a/Blog/vercel.json
+++ b/Blog/vercel.json
@@ -1,18 +1,33 @@
 {
     "builds": [
-        {
-            "src": "conifg/wsgi.py",
-            "use": "@vercel/python",
-            "config": {
-                "maxLambdaSize": "15mb",
-                "runtime": "python3.10"
-            }
+      {
+        "src": "socialsite/wsgi.py",
+        "use": "@vercel/python",
+        "config": {
+          "maxLambdaSize": "15mb",
+          "runtime": "python3.9"
         }
+      }
     ],
     "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "config/wsgi.py"
+      {
+        "src": "/static/(.*)",
+        "dest": "/static/$1",
+        "headers": {
+          "Cache-Control": "max-age=31536000, immutable"
         }
-    ]
-}
+      },
+      {
+        "src": "/media/(.*)",
+        "dest": "/media/$1",
+        "headers": {
+          "Cache-Control": "max-age=31536000, immutable"
+        }
+      },
+      {
+        "src": "/(.*)",
+        "dest": "socialsite/wsgi.py"
+      }
+    ],
+    
+  }
